Gets rid of unnecessary stuff.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -22,7 +22,7 @@ body {
   #vcenter { height: inherit !important; min-height: inherit !important;}
 }
 
-input {
+input, textarea {
   box-shadow: 0 2px 3px rgba(0,0,0,0.06)
 }
 
