Applies a couple bug fixes.

--- a/app/views/main/cdc.html.haml
+++ b/app/views/main/cdc.html.haml
@@ -3,8 +3,7 @@
 %h2 Thank you for contributing to the dataset!
 
 .h1.bold.line-wide
-  Please submit your temperature again tomorrow at
-  = DateTime.now.strftime("%I:00 %p") + '.'
+  Please submit your temperature again tomorrow.
 
 %br
 %hr
