--- a/app/views/contactings/success.html.haml
+++ b/app/views/contactings/success.html.haml
@@ -1,8 +1,8 @@
 .p3
 
-  p.purple.mt0.h3.bold Message sent!
+  %p.purple.mt0.h3.bold Message sent!
 
-  p We've received your note, and we'll reply as soon as possible.
+  %p We've received your note, and we'll reply as soon as possible.
 
-  p.mb0 Thanks.
+  %p.mb0 Thanks.
 
