--- a/app/views/main/cdc.html.haml
+++ b/app/views/main/cdc.html.haml
@@ -2,7 +2,7 @@
 
 %h2 Thank you for contributing to the dataset!
 
-.h1.bold.line-wide
+.h1.bold.line-wide{style: "color: orange"}
   Please submit your temperature again tomorrow.
 
 %br
