--- a/app/views/readings/_form.html.haml
+++ b/app/views/readings/_form.html.haml
@@ -46,7 +46,7 @@
 
             .col.col-6
               - placeholder = @prev&.temp_f || "98.6"
-              = f.number_field :temp_f, min: 94.0, max: 110.0, step: 0.1, class: "col-8", placeholder: "#{placeholder}°F", style: 'width: 8em;'
+              = f.number_field :temp_f, min: 94.0, max: 110.0, step: 0.1, class: "col-8", placeholder: "#{placeholder}°F", style: 'width: 8em;', inputmode: 'numeric'
               = errors_for(f, :temp_f)
 
 
@@ -58,22 +58,22 @@
                 %br
                 %small.muted (postal code)
             .col.col-6
-              = f.text_field :zipcode, style: "width: 8em;", value: @prev&.zipcode, class: 'zip-lookup-field-zipcode', pattern: "[0-9.]+"
+              = f.text_field :zipcode, style: "width: 8em;", value: @prev&.zipcode, class: 'zip-lookup-field-zipcode', pattern: "[0-9]*", inputmode: 'numeric'
               = errors_for(f, :zipcode)
 
 
           = form_group do
 
-            .col.col-3.mb1
+            .col.col-4.mb1
               = f.label :age, class: 'mb1' do
                 .xs-show Age <small class='muted'>(optional)</small>
                 .xs-hide Age
 
               %br
-              = f.number_field :age, min: 0, max: 110, style: "width: 90%", value: @prev&.age, placeholder: "yrs old"
+              = f.number_field :age, min: 0, max: 110, style: "width: 80%", value: @prev&.age, placeholder: "yrs old"
               = errors_for(f, :age)
 
-            .col.col-9
+            .col.col-8
               = f.label :sex, class: 'mb1' do
                 .xs-show Sex <small class='muted'>(optional)</small>
                 .xs-hide Sex
