--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -74,6 +74,10 @@ input, textarea {
   input {
     padding: calc(1.25rem + ((1vw - 0.3rem) * 0.5556)) calc(.75rem + ((1vw - 0.3rem) * 0.5556)) !important;
     font-size: calc(1.5rem + ((1vw - 0.5rem) * 0.5556));
+    @supports (-moz-appearance:none) {
+      font-size: 1.5rem !important;
+      height: 3rem !important;
+    }
   }
 }
 
