--- a/app/views/data/index.html.haml
+++ b/app/views/data/index.html.haml
@@ -2,7 +2,7 @@
 = stylesheet_link_tag 'isolate/internal'
 
 %br
-.line-wide
+.line-tight
 
   %h4.muted.m0
     = link_to "TakeYourTemp.org", root_path
@@ -16,20 +16,17 @@
 
   %br/
 
-  %table.table.table-light.col-12.mxn2
-    %thead
+%table.table.table-light.col-12.mxn2
+  %thead
+    %tr
+      %th Time
+      %th Download Link
+      %th Records
+      %th Format
+  %tbody
+    - @rows.each do |row|
       %tr
-        %th Time
-        %th Download Link
-        %th Records
-        %th Format
-    %tbody
-      %tr
-        %td.py1
-          Mon, Mar 23 @ 1810 UTC
-        %td.py1
-          = link_to "2020-03-23_18-10-49.dump", "https://takeyourtemp.org.s3.amazonaws.com/2020-03-23_18-10-49.dump"
-        %td.py1
-          48
-        %td.py1
-          Postgres
+        %td.py1= row[0]
+        %td.py1= link_to row[1], row[2]
+        %td.py1= row[3]
+        %td.py1= row[4]
