Changes some text on the home page.

--- a/app/views/readings/index.html.haml
+++ b/app/views/readings/index.html.haml
@@ -14,7 +14,7 @@
       <span class='lite muted'>every day</span>
       </h2>
       <div class="center">
-      <big><strong>Stop the spread</strong> of COVID-19 by <br> contributing to the <em>most important</em><br> crowdsourcing operation in US history.</big></div>
+      <big><strong>Stop the spread</strong> of COVID-19 by helping<br/> crowdsource temperature and symptom data.</big></div>
 
       <hr class='mt3 mb3' style='width: 50%;'>
       <div class="line-squeeze mx-auto">
