--- a/app/views/readings/index.html.haml
+++ b/app/views/readings/index.html.haml
@@ -49,7 +49,7 @@
     <br>
     <footer class='container'>
     <p class='mt0 small center'>
-    <span class='muted'>Note: Open access to data is provided to health care officials.</span>
+    %span.muted= t(:open_access_is_provided) 
     <br>
     <a href="/contactings/new"><b>Contact us</b></a>
     for inquiries. Read our
