--- a/app/views/contactings/new.html.haml
+++ b/app/views/contactings/new.html.haml
@@ -2,7 +2,7 @@
 
   .line-wide
 
-    %h4.muted.serif.m0= link_to "TakeYourTemp.org", root_path
+    %h4.serif.m0= link_to "TakeYourTemp.org", root_path
     %h1.h2.bold.mt1 Contact Us
 
     %br
