--- a/app/views/main/faq.html.haml
+++ b/app/views/main/faq.html.haml
@@ -4,7 +4,7 @@
 
   .line-wide
 
-    %h4.muted.serif.m0= link_to "TakeYourTemp.org", root_path
+    %h4.serif.m0= link_to "TakeYourTemp.org", root_path
     %h1.h2.bold.mt1 Frequently Asked Questions
     
     %h3.mt4 Who are you?
