--- a/app/views/reminders/show.html.haml
+++ b/app/views/reminders/show.html.haml
@@ -5,7 +5,7 @@
 
   .line-wide
 
-    %h4.muted.serif.m0= link_to "TakeYourTemp.org", root_path
+    %h4.serif.m0= link_to "TakeYourTemp.org", root_path
     %h1.h2.bold.mt1 Reminders
     
     %br
