--- a/app/views/readings/_form.html.haml
+++ b/app/views/readings/_form.html.haml
@@ -44,7 +44,10 @@
 
             .col.col-6
               - placeholder = @prev&.temp_f || "98.6"
-              = f.number_field :temp_f, min: 94.0, max: 110.0, step: 0.1, class: "col-8", placeholder: "#{placeholder}°F", style: 'width: 8em;', inputmode: 'decimal'
+              - if browser.ie?
+                = f.text_field :temp_f, class: "col-8", placeholder: "#{placeholder}°F", style: 'width: 8em;'
+              - else
+                = f.number_field :temp_f, min: 94.0, max: 110.0, step: 0.1, class: "col-8", placeholder: "#{placeholder}°F", style: 'width: 8em;', inputmode: 'decimal'
               = errors_for(f, :temp_f)
 
 
