--- a/app/views/readings/_form.html.haml
+++ b/app/views/readings/_form.html.haml
@@ -33,10 +33,10 @@
 
         .p3
 
-          = form_group(class: 'big-group') do
+          = form_group do
 
             .col.col-6
-              = f.label :temp_f do
+              = f.label :temp_f, class: 'embiggen' do
                 = t(:temperature) + '*'
                 %br
                 %small.sm-show.muted= t(:degrees_f)
@@ -47,7 +47,7 @@
               - if browser.ie?
                 = f.text_field :temp_f, class: "col-8", placeholder: "#{placeholder}°F", style: 'width: 8em;'
               - else
-                = f.number_field :temp_f, min: 94.0, max: 110.0, step: 0.1, class: "col-8", placeholder: "#{placeholder}°F", style: 'width: 8em;', inputmode: 'decimal'
+                = f.number_field :temp_f, min: 94.0, max: 110.0, step: 0.1, class: "col-8 embiggen", placeholder: "#{placeholder}°F", style: 'width: 8em;', inputmode: 'decimal'
               = errors_for(f, :temp_f)
 
 
